Update notebook with missing file description

--- a/StudentDropout.ipynb
+++ b/StudentDropout.ipynb
@@ -101,7 +101,7 @@
         "outputId": "32c90f71-59ca-4929-e9af-7bb8051c054d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 496
         }
       },
       "execution_count": 20,
@@ -764,7 +764,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 270
+          "height": 308
         },
         "id": "ldnmu774BrVG",
         "outputId": "e0822c55-c5bd-4ef3-c3a7-db96577ed218"
@@ -1232,7 +1232,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
+          "height": 402
         },
         "id": "5PvmxYr1Dr1n",
         "outputId": "32433f52-2447-452a-b1a6-fa16b1bc9229"
@@ -1915,7 +1915,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 496
         },
         "id": "6VSD31a59PvX",
         "outputId": "107e0f06-de9f-4243-e621-b748eb0eef1d"
@@ -2564,7 +2564,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 335
+          "height": 372
         },
         "id": "MRegF5p09Q-M",
         "outputId": "dcbe61c2-52cb-4ac6-b012-0d5d4289666f"
@@ -3133,7 +3133,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 496
         },
         "id": "KCbgvj109SMo",
         "outputId": "6ecd1ed4-607a-48fb-a168-a94f45b5ba84"
@@ -3983,7 +3983,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 908
+          "height": 626
         },
         "id": "N9CyhvxtBUTs",
         "outputId": "8343e911-5eee-4f12-eda5-d18418db1aef"
@@ -4031,7 +4031,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 977
+          "height": 696
         },
         "id": "g6u3ORXQBbuw",
         "outputId": "b4b46e4a-1c94-4ad2-bc4d-b6043afe20d9"
@@ -4078,7 +4078,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 808
+          "height": 504
         },
         "id": "S38YnUPtBdCS",
         "outputId": "093e1449-47e3-45b6-d0e5-b664cbbb6bae"
@@ -4111,26 +4111,29 @@
       "source": [
         "#find missing data\n",
         "missing_values = df.isnull()\n",
-        "missing_count = df.isnull().sum()\n",
-        "\n",
+        "missing_count = df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "OCvatMy6CAah"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(\"DataFrame with missing values:\")\n",
-        "display(df)\n",
-        "\n",
-        "print(\"\\nMissing values (True indicates missing):\")\n",
-        "display(missing_values)\n",
-        "\n",
-        "print(\"\\nCount of missing values in each column:\")\n",
-        "print(missing_count)"
+        "display(df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 513
         },
-        "id": "OCvatMy6CAah",
-        "outputId": "d6d8a0e2-60f1-4563-c309-710f5bf1f966"
+        "id": "0L8MxVCNFKkn",
+        "outputId": "0d6b12cb-de09-4ca6-bf77-25c29b350308"
       },
-      "execution_count": 15,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -4264,7 +4267,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b12d318c-d69c-495a-b0a0-eb8db7ff414e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-24cdd662-bad6-49ef-8918-34cd65431327\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4578,7 +4581,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b12d318c-d69c-495a-b0a0-eb8db7ff414e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-24cdd662-bad6-49ef-8918-34cd65431327')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4630,12 +4633,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b12d318c-d69c-495a-b0a0-eb8db7ff414e button.colab-df-convert');\n",
+              "        document.querySelector('#df-24cdd662-bad6-49ef-8918-34cd65431327 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b12d318c-d69c-495a-b0a0-eb8db7ff414e');\n",
+              "        const element = document.querySelector('#df-24cdd662-bad6-49ef-8918-34cd65431327');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4655,8 +4658,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-72f97537-dd3e-4c46-b647-7f9e1cfa3075\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-72f97537-dd3e-4c46-b647-7f9e1cfa3075')\"\n",
+              "<div id=\"df-f812fd58-ea38-4b61-ae3d-17f01a33fcbb\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f812fd58-ea38-4b61-ae3d-17f01a33fcbb')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4775,7 +4778,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-72f97537-dd3e-4c46-b647-7f9e1cfa3075 button');\n",
+              "        document.querySelector('#df-f812fd58-ea38-4b61-ae3d-17f01a33fcbb button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -4786,7 +4789,25 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nMissing values (True indicates missing):\")\n",
+        "display(missing_values)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
         },
+        "id": "NVRH7UTCFIJ2",
+        "outputId": "0f00acb5-6a11-4dd8-8517-25bd1daa4522"
+      },
+      "execution_count": 52,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
@@ -4920,7 +4941,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2b8a2f73-6b22-4a3f-9754-dd02f89b1c89\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d55e5c27-8764-46c7-afe7-1f805a0829f7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5234,7 +5255,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b8a2f73-6b22-4a3f-9754-dd02f89b1c89')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d55e5c27-8764-46c7-afe7-1f805a0829f7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5286,12 +5307,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2b8a2f73-6b22-4a3f-9754-dd02f89b1c89 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d55e5c27-8764-46c7-afe7-1f805a0829f7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2b8a2f73-6b22-4a3f-9754-dd02f89b1c89');\n",
+              "        const element = document.querySelector('#df-d55e5c27-8764-46c7-afe7-1f805a0829f7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -5311,8 +5332,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c10e4b14-178a-4cda-964f-f648fab1cc80\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c10e4b14-178a-4cda-964f-f648fab1cc80')\"\n",
+              "<div id=\"df-181add71-2f6a-4c74-8881-0e65fe775a17\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-181add71-2f6a-4c74-8881-0e65fe775a17')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5431,7 +5452,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c10e4b14-178a-4cda-964f-f648fab1cc80 button');\n",
+              "        document.querySelector('#df-181add71-2f6a-4c74-8881-0e65fe775a17 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -5442,7 +5463,24 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\nCount of missing values in each column:\")\n",
+        "print(missing_count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "jWvH9uHUFJbQ",
+        "outputId": "73eff5f1-8361-47dc-d74b-215f52eaeb3c"
+      },
+      "execution_count": 53,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
@@ -5490,6 +5528,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There is no missing data within the dataset."
+      ],
+      "metadata": {
+        "id": "VDFvIEqqFDMM"
+      }
     },
     {
       "cell_type": "code",
